--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         </form>
       </header>
       <main>
-        <div class="current-weather">
+        <div class="current-weather" class="current-weather-display">
           <div>
-            <h1 class="current-city" id="current-city">Paris</h1>
+            <h1 class="current-city" id="current-city"></h1>
             <p class="current-details">
-              <span id="current-date"></span>, <span id="current-description">moderate rain</span> <br />
-              Humidity: <strong id="humidity">87%</strong>, Wind: <strong id="wind">7.2km/h</strong>
+              <span id="current-date"></span>, <span id="current-description"></span> <br />
+              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
+            <span class="current-temperature-icon"></span
             ><span class="current-temperature-value" id="current-temperature"
-              >24</span
-            ><span class="current-temperature-unit">°C</span>
+              ></span
+            ><span class="current-temperature-unit"></span>
           </div>
         </div>
         <div class="weather-forecast" id="forecast">
